# mobcent-rs

./: Cargo.toml
src/: board.rs  lib.rs
src/forum/: forum_list.rs  topic_list.rs
src/structs/: board.rs  command.rs  topic.rs
src/user/: login.rs
src/utils/: constants.rs  helper_types.rs  type_alias.rs  types.rs
