[package]
name = "hp-ic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iced = "0.4.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
json = "0.12.4"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
bitflags = "1.3.2"